k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: neura-sync-backend-svc
  namespace: neura-sync
  labels:
    app: neura-sync-backend
spec:
  selector:
    app: neura-sync-backend
  ports:
    - protocol: TCP
      port: 8000               # External port
      targetPort: 8000          # Backend app port
  type: ClusterIP               # Internal service access
